--- a/ApiApp/appsettings.local.json
+++ b/ApiApp/appsettings.local.json
@@ -1,5 +1,18 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "LogRootPath": "Logs",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "JWT": {
+        "Issuer": "http://localhost",
+        "Audience": "http://localhost"
+    }
 }
+
+/*,
+        "TokenValidationParameters": {
+            "ValidIssuer": "http://localhost:60651",
+            "ValidAudience": "http://localhost:60651"
+        }
+
+*/
