--- a/ApiApp/ApiApp.csproj
+++ b/ApiApp/ApiApp.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
     <Folder Include="Models\" />
+    <Folder Include="Utils\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
