--- a/ApiApp/appsettings.prod.json
+++ b/ApiApp/appsettings.prod.json
@@ -1,5 +1,15 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "LogRootPath": "Logs",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "JWT": {
+        "ServerSecret": "54f1b9a3c21242df93b01d78810621114843801a692146c58e8092a",
+        "Issuer": "http://localhost",
+        "Audience": "http://localhost",
+        "TokenValidationParameters": {
+            "ValidIssuer": "http://localhost:60651",
+            "ValidAudience": "http://localhost:60651"
+        }
+    }
 }
